# lucid_camera_driver

./: Dockerfile  README.md  ros_and_workspace_setup.sh  ros_arenasd.code-workspace
TRI054S_1.61.0.0_Documentation_English/html/: AcquisitionControl.html  ActionControl.html  AnalogControl.html  AutoExposureAOI.html  CategoryDoc.html  ChunkDataControl.html  ColorTransformationControl.html  CounterAndTimerControl.html  DeviceControl.html  DigitalIOControl.html  EventControl.html  EventEncoder0RestartedData.html  EventEncoder0StoppedData.html  EventExposureEndData.html  EventExposureStartData.html  EventTestData.html  ExternalDoc.html  FileAccessControl.html  GigEVision.html  HDRControl.html  I2CAccessControl.html  ImageFormatControl.html  LUTControl.html  PtpControl.html  SequencerControl.html  SerialAccessControl.html  SoftwareSignalControl.html  TestControl.html  TransferControl.html  TransportLayerControl.html  UserSetControl.html  acquisition_mode.html  bandwidth_management.html  binning.html  camera_features_triton.html  camera_specification_triton.html  ccm.html  chunk_data.html  color_processing.html  configure_host_camera.html  (+55 more)
TRI054S_1.61.0.0_Documentation_English/html/_static/css/: theme.css
dummy/: package.xml
lucid_camera_driver/inc/: image_encodings.h
lucid_camera_driver/src/arena_camera/: .gitignore  CMakeLists.txt  LICENSE  README.rst  package.xml  setup.py
lucid_camera_driver/src/arena_camera/cmake/: Findarena_sdk.cmake
lucid_camera_driver/src/arena_camera/config/: default.yaml
lucid_camera_driver/src/arena_camera/include/arena_camera/: arena_camera.h  arena_camera_node.h  arena_camera_parameter.h  encoding_conversions.h
lucid_camera_driver/src/arena_camera/include/arena_camera/internal/: arena_camera.h
lucid_camera_driver/src/arena_camera/launch/: arena_camera_grab_and_save_as.launch  arena_camera_node.launch  arena_camera_node_multi_device_example.launch  lucid.launch  lucid_multi.launch  lucid_single.launch
lucid_camera_driver/src/arena_camera/rosdep/: arena_sdk.rdmanifest
lucid_camera_driver/src/arena_camera/scripts/: file_sequencer.py  grab_and_save_image_action_server.py  individual_flash_test.py  result_bag_to_action.py  sequence_to_file.py  toggle_camera.py  triggered_image_topic.py
lucid_camera_driver/src/arena_camera/src/: arena_camera.cpp  arena_camera_node.cpp  arena_camera_parameter.cpp  encoding_conversions.cpp  main.cpp  write_device_user_id_to_camera.cpp
lucid_camera_driver/src/camera_control_msgs/: .gitignore  CMakeLists.txt  LICENSE.rst  README.rst  package.xml
lucid_camera_driver/src/camera_control_msgs/action/: GrabAndSaveImage.action  GrabHDRImage.action  GrabImages.action
lucid_camera_driver/src/camera_control_msgs/srv/: GetCamProperties.srv  SetBinning.srv  SetBool.srv  SetBrightness.srv  SetExposure.srv  SetGain.srv  SetGamma.srv  SetROI.srv  SetSleeping.srv
