<?xml version="1.0"?>

<package format="2">
  <name>arena_camera</name>
  
  <version>0.0.1</version>
  
  <description>
    Proprietary package for Lucid Vision Labs cameras using the Arena API.
    - Supports DART, USB3, and GigE cameras.
    - Supports setting gain, gamma, exposure time, binning factor, region of
      interest (ROI), and brightness using ROS services.
  </description>

  <author>LUCID Vision Labs</author>
  
  <maintainer email="goodarzm@vt.edu">Goodarz Mehr</maintainer>
  <maintainer email="support@thinklucid.com">Support</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/arena_camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>camera_control_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>diagnostic_updater</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>arena_sdk</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>roslaunch</depend>
  <depend>roslint</depend>
  <depend>cav_msgs</depend>
</package>