<?xml version="1.0"?>

<package format="2">
  <name>camera_control_msgs</name>

  <version>0.2.1</version>

  <description>
      Message package from the arena_camera package.
      Contains action and service definitions of the arena_camera interface.
  </description>

  <author>Marcel Debout</author>
  <author>Markus Grimm</author>
  <author>Nikolas Engelhard</author>
  
  <maintainer email="grimm@magazino.eu">Markus Grimm</maintainer>
  <maintainer email="engelhard@magazino.eu">Nikolas Engelhard</maintainer>

  <license>BSD</license>

  <url>http://www.ros.org/wiki/arena_camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
